[package]
name = "dataplane-nat"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
ahash = { workspace = true }
dashmap = { workspace = true }
iptrie = { workspace = true }
left-right = { workspace = true }
#mgmt = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
routing = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# internal
routing = { workspace = true, features = ["testing"] }

# external
tracing-test = { workspace = true, features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
