[package]
name = "dataplane-nat"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
ahash = { workspace = true }
dashmap = { workspace = true }
left-right = { workspace = true }
lpm = { workspace = true }
#mgmt = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
routing = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# internal
lpm = { workspace = true, features = ["testing"] }
net = { workspace = true, features = ["bolero"] }
routing = { workspace = true, features = ["testing"] }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }
tracing-test = { workspace = true, features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
