[package]
name = "dataplane-nat"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
shuttle = ["concurrency/shuttle", "dep:shuttle"]

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
concurrency = { workspace = true, features = [] }
config = { workspace = true }
dashmap = { workspace = true }
flow-info = { workspace = true }
left-right = { workspace = true }
lpm = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
pkt-meta = { workspace = true }
rand = { workspace = true }
roaring = { workspace = true }
routing = { workspace = true }
shuttle = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# internal
lpm = { workspace = true, features = ["testing"] }
net = { workspace = true, features = ["bolero"] }
routing = { workspace = true, features = ["testing"] }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }
ipnet = { workspace = true }
shuttle = { workspace = true, features = [] }
tracing-test = { workspace = true, features = [] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
