[package]
name = "net"
version = "0.0.1"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
default = []
arbitrary = ["dep:bolero"]
test_buffer = []

[dependencies]
ahash = { workspace = true }
arrayvec = { workspace = true }
bolero = { workspace = true, features = ["alloc", "arbitrary", "std"], optional = true }
derive_builder = { workspace = true, features = [] }
etherparse = { workspace = true, features = ["std"] }
multi_index_map = { workspace = true, default-features = false, features = ["serde"] }
ordermap = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
bolero = { workspace = true, features = ["alloc", "arbitrary", "std"] }
etherparse = { workspace = true, default-features = false, features = ["std"] }
ordermap = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
