[package]
name = "dataplane-net"
version = "0.0.1"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
default = []
netdevsim = []

bolero = ["dep:bolero", "id/bolero"]
test_buffer = []

[dependencies]
ahash = { workspace = true }
arrayvec = { workspace = true, features = ["serde", "std"] }
bitflags = { workspace = true }
bolero = { workspace = true, features = ["alloc", "arbitrary", "std"], optional = true }
concurrency = { workspace = true }
derive_builder = { workspace = true, features = ["alloc"] }
etherparse = { workspace = true, features = ["std"] }
flow-info = { workspace = true }
linkme = { workspace = true }
linux-raw-sys = { workspace = true, features = ["std", "if_ether"] }
multi_index_map = { workspace = true, default-features = false, features = ["serde"] }
ordermap = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
thiserror = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }
id = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["alloc", "arbitrary", "std"] }
etherparse = { workspace = true, default-features = false, features = ["std"] }
ordermap = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
