[package]
name = "dataplane-pipeline"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
arc-swap = { workspace = true }
dyn-iter = { workspace = true }
id = { workspace = true }
linkme = { workspace = true }
net = { workspace = true, features = ["test_buffer"] }
ordermap = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
net = { workspace = true, features = ["test_buffer"] }
