[package]
name = "dataplane-pkt-meta"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
shuttle = ["concurrency/shuttle"]
std = []
testing = []
bolero = ["dep:bolero", "net/bolero"]

[dependencies]
ahash = { workspace = true }
bolero = { workspace = true, optional = true }
lpm = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
dashmap = { workspace = true, features = ["raw-api"] }
flow-info = { workspace = true }
left-right = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
priority-queue = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
bolero = { workspace = true, default-features = false }
lpm = { workspace = true, features = ["testing"] }
net = { workspace = true, features = ["bolero"] }
tracing-test = { workspace = true, features = [] }
shuttle = { workspace = true }
