[package]
name = "dataplane-routing"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
testing = []

[dependencies]
ahash = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
cli = { workspace = true }
derive_builder = { workspace = true, features = ["default", "std"] }
dplane-rpc = { workspace = true }
ipnet = { workspace = true }
iptrie = { workspace = true }
left-right = { workspace = true }
mac_address= { workspace = true }
mio = { workspace = true, features = ["os-ext", "net"] }
net = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }

# arp resolver
procfs = { workspace = true }
netdev = { workspace = true }

[dev-dependencies]
serde_yml = { workspace = true }
tracing-test = { workspace = true, features = [] }

