[package]
name = "dataplane-routing"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
testing = []

[dependencies]
# internal
cli = { workspace = true }
config = { workspace = true }
dplane-rpc = { workspace = true }
left-right-tlcache = { workspace = true }
lpm = { workspace = true }
net = { workspace = true }
tracectl = { workspace = true }

# external
ahash = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock"] }
derive_builder = { workspace = true, features = ["default", "std"] }
ipnet = { workspace = true }
left-right = { workspace = true }
linkme = { workspace = true }
mac_address= { workspace = true }
mio = { workspace = true, features = ["os-ext", "net"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }

# arp resolver
procfs = { workspace = true }
netdev = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false }
lpm = { workspace = true, features = ["testing"] }
rand = { workspace = true, default-features = false, features = ["thread_rng"] }
tracing-test = { workspace = true, features = [] }

