[package]
name = "scratch"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dpdk-sys = { path = "../dpdk-sys" }
dpdk = { path = "../dpdk" }

rand = { version = "0.8.5" }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true }

[build-dependencies]
dpdk-sysroot-helper = { path = "../dpdk-sysroot-helper" }
