[package]
name = "dataplane-stats"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
net = { workspace = true, features = ["test_buffer"] }
left-right = { workspace = true }
vpcmap = { workspace = true }
pipeline = { workspace = true }
tracing = { workspace = true }

