[package]
name = "dataplane-vpc-manager"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = ["bolero"]
bolero = ["dep:bolero", "interface-manager/bolero", "id/bolero", "net/arbitrary"]

[dependencies]
# internal
id = { workspace = true }
interface-manager = { workspace = true }
net = { workspace = true }
rekon = { workspace = true }

# external
bolero = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
caps = { version = "0.5.5", default-features = false, features = [] }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
futures = { workspace = true, features = ["default"] }
multi_index_map = { workspace = true, features = ["serde"] }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["rc", "derive"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
bolero = { workspace = true, default-features = false, features = ["alloc"] }
fixin = { workspace = true }
id = { workspace = true, features = ["bolero"] }
interface-manager = { workspace = true, features = ["bolero"] }
net = { workspace = true, features = ["arbitrary"] }
tracing-test = { workspace = true, features = [] }

