[package]
name = "dataplane-vpcmap"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"


[dependencies]
ahash = { workspace = true }
left-right = { workspace = true }
net = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true, features = [] }

